<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/mainlayout" android:background="@null" android:paddingLeft="@dimen/context_padding_left" android:paddingTop="@dimen/context_padding_top" android:paddingRight="@dimen/context_padding_right" android:paddingBottom="@dimen/context_padding_bottom" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Button android:id="@id/buttonfake" android:background="@null" android:visibility="invisible" android:layout_width="1.0px" android:layout_height="1.0px" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/borderlayout" android:tag="paintbottom" android:background="@null" android:paddingLeft="18.0dip" android:paddingRight="18.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true">
        <RadioGroup android:gravity="left" android:orientation="vertical" android:id="@id/radioGroup" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="12.0dip" android:minWidth="@dimen/popup_full_minwidth" app:layout_constraintBottom_toTopOf="@id/layoutContextItem4" app:layout_constraintTop_toTopOf="parent">
            <RadioButton android:textAppearance="@style/StyleContextMenuText" android:layout_gravity="left" android:id="@id/layoutContextItem0" android:layout_width="wrap_content" android:layout_height="@dimen/context_height" android:text="@string/openfilesettings_sortname" android:lines="1" />
            <RadioButton android:textAppearance="@style/StyleContextMenuText" android:id="@id/layoutContextItem1" android:layout_width="wrap_content" android:layout_height="@dimen/context_height" android:text="@string/openfilesettings_sortsize" android:lines="1" />
            <RadioButton android:textAppearance="@style/StyleContextMenuText" android:id="@id/layoutContextItem2" android:layout_width="wrap_content" android:layout_height="@dimen/context_height" android:text="@string/openfilesettings_sortdate" android:lines="1" />
            <RadioButton android:textAppearance="@style/StyleContextMenuText" android:id="@id/layoutContextItem3" android:layout_width="wrap_content" android:layout_height="@dimen/context_height" android:text="@string/openfilesettings_sortext" android:lines="1" />
        </RadioGroup>
        <com.neverland.viscomp.dialogs.SwitchPlus android:textAppearance="@style/StyleContextMenuText" android:gravity="center|left" android:id="@id/layoutContextItem4" android:background="@null" android:paddingLeft="6.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/context_height" android:minWidth="@dimen/popup_full_minwidth" android:text="@string/openfilesettings_sortreverse" app:layout_constraintBottom_toTopOf="@id/layoutContextItem5" app:layout_constraintTop_toBottomOf="@id/radioGroup" />
        <com.neverland.viscomp.dialogs.SwitchPlus android:textAppearance="@style/StyleContextMenuText" android:gravity="center|left" android:id="@id/layoutContextItem5" android:background="@null" android:paddingLeft="6.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/context_height" android:minWidth="@dimen/popup_full_minwidth" android:text="@string/openfilesettings_showmetainfo" app:layout_constraintBottom_toTopOf="@id/layoutContextItem6" app:layout_constraintTop_toBottomOf="@id/layoutContextItem4" />
        <com.neverland.viscomp.dialogs.SwitchPlus android:textAppearance="@style/StyleContextMenuText" android:gravity="center|left" android:id="@id/layoutContextItem6" android:background="@null" android:paddingLeft="6.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/context_height" android:minWidth="@dimen/popup_full_minwidth" android:text="@string/openfilesettings_showtile" app:layout_constraintBottom_toTopOf="@id/layoutContextItem7" app:layout_constraintTop_toBottomOf="@id/layoutContextItem5" />
        <com.neverland.viscomp.dialogs.SwitchPlus android:textAppearance="@style/StyleContextMenuText" android:gravity="center|left" android:id="@id/layoutContextItem7" android:background="@null" android:paddingLeft="6.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/context_height" android:minWidth="@dimen/popup_full_minwidth" android:text="@string/openfilesettings_showbookshelf" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@id/layoutContextItem6" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>