<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/mainlayout" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:id="@id/borderlayout" android:tag="paint" android:background="@null" android:paddingLeft="@dimen/context_padding_left" android:paddingTop="@dimen/context_padding_top" android:paddingRight="@dimen/context_padding_right" android:paddingBottom="@dimen/context_padding_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <com.neverland.viscomp.dialogs.ClicableLinerLayout android:orientation="horizontal" android:id="@id/layoutContextItem0" android:paddingLeft="6.0dip" android:paddingRight="24.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/context_height">
            <com.neverland.viscomp.dialogs.MenuButton android:textSize="@dimen/icon_font_size" android:background="@null" android:layout_width="@dimen/button_width" android:layout_height="@dimen/context_height" android:text="@string/font_icon_import_contacts" android:fontFamily="@font/materialiconsregular" />
            <com.neverland.viscomp.dialogs.MyTextView android:textAppearance="@style/StyleContextMenuText" android:gravity="center|left" android:layout_gravity="center|left" android:layout_width="wrap_content" android:layout_height="@dimen/context_height" android:minWidth="@dimen/context_text_minwidth" android:text="@string/dialog_library_read" android:singleLine="true" />
        </com.neverland.viscomp.dialogs.ClicableLinerLayout>
        <com.neverland.viscomp.dialogs.ClicableLinerLayout android:orientation="horizontal" android:id="@id/layoutContextItem1" android:paddingLeft="6.0dip" android:paddingRight="24.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/context_height">
            <com.neverland.viscomp.dialogs.MenuButton android:textSize="@dimen/icon_font_size" android:background="@null" android:layout_width="@dimen/button_width" android:layout_height="@dimen/context_height" android:text="@string/font_icon_info" android:fontFamily="@font/materialiconsregular" />
            <com.neverland.viscomp.dialogs.MyTextView android:textAppearance="@style/StyleContextMenuText" android:gravity="center|left" android:layout_gravity="center|left" android:layout_width="wrap_content" android:layout_height="@dimen/context_height" android:minWidth="@dimen/context_text_minwidth" android:text="@string/dialog_fileopen_properties" android:singleLine="true" />
        </com.neverland.viscomp.dialogs.ClicableLinerLayout>
        <com.neverland.viscomp.dialogs.ClicableLinerLayout android:orientation="horizontal" android:id="@id/layoutContextItem2" android:paddingLeft="6.0dip" android:paddingRight="24.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/context_height">
            <com.neverland.viscomp.dialogs.MenuButton android:textSize="@dimen/icon_font_size" android:background="@null" android:layout_width="@dimen/button_width" android:layout_height="@dimen/context_height" android:text="@string/font_icon_delete" android:fontFamily="@font/materialiconsregular" />
            <com.neverland.viscomp.dialogs.MyTextView android:textAppearance="@style/StyleContextMenuText" android:gravity="center|left" android:layout_gravity="center|left" android:layout_width="wrap_content" android:layout_height="@dimen/context_height" android:minWidth="@dimen/context_text_minwidth" android:text="@string/dialog_fileopen_delete" android:singleLine="true" />
        </com.neverland.viscomp.dialogs.ClicableLinerLayout>
        <com.neverland.viscomp.dialogs.ClicableLinerLayout android:orientation="horizontal" android:id="@id/layoutContextItem3" android:paddingLeft="6.0dip" android:paddingRight="24.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/context_height">
            <com.neverland.viscomp.dialogs.MenuButton android:textSize="@dimen/icon_font_size" android:background="@null" android:layout_width="@dimen/button_width" android:layout_height="@dimen/context_height" android:text="@string/font_icon_loyalty" android:fontFamily="@font/materialiconsregular" />
            <com.neverland.viscomp.dialogs.MyTextView android:textAppearance="@style/StyleContextMenuText" android:gravity="center|left" android:layout_gravity="center|left" android:layout_width="wrap_content" android:layout_height="@dimen/context_height" android:minWidth="@dimen/context_text_minwidth" android:text="@string/dialog_fileopen_favorites" android:singleLine="true" />
        </com.neverland.viscomp.dialogs.ClicableLinerLayout>
    </LinearLayout>
</RelativeLayout>