<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/mainlayout" android:background="@null" android:paddingLeft="@dimen/context_padding_left" android:paddingTop="@dimen/context_padding_top" android:paddingRight="@dimen/context_padding_right" android:paddingBottom="@dimen/context_padding_bottom" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Button android:id="@id/buttonfake" android:background="@null" android:visibility="invisible" android:layout_width="1.0px" android:layout_height="1.0px" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
    <LinearLayout android:orientation="vertical" android:id="@id/borderlayout" android:tag="paintbottom" android:background="@null" android:paddingLeft="12.0dip" android:paddingRight="24.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true">
        <RadioGroup android:gravity="left" android:orientation="vertical" android:id="@id/radioGroup" android:background="@null" android:paddingLeft="18.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="12.0dip" android:minWidth="@dimen/popup_full_minwidth" app:layout_constraintBottom_toTopOf="@id/switch1" app:layout_constraintTop_toTopOf="parent">
            <RadioButton android:textAppearance="@style/StyleContextMenuText" android:id="@id/layoutContextItem0" android:layout_width="wrap_content" android:layout_height="@dimen/context_height" android:text="@string/dialog_openbmkview_settings_sortcustom" android:lines="1" />
            <RadioButton android:textAppearance="@style/StyleContextMenuText" android:layout_gravity="left" android:id="@id/layoutContextItem1" android:layout_width="wrap_content" android:layout_height="@dimen/context_height" android:text="@string/dialog_openbmkview_settings_sortdate" android:lines="1" />
            <RadioButton android:textAppearance="@style/StyleContextMenuText" android:id="@id/layoutContextItem2" android:layout_width="wrap_content" android:layout_height="@dimen/context_height" android:text="@string/dialog_openbmkview_settings_sortpos" android:lines="1" />
        </RadioGroup>
        <com.neverland.viscomp.dialogs.ClicableLinerLayout android:orientation="horizontal" android:id="@id/layoutContextItem3" android:paddingLeft="3.0dip" android:paddingRight="24.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/context_height" android:minWidth="@dimen/popup_full_minwidth">
            <com.neverland.viscomp.dialogs.MenuButton android:textSize="@dimen/icon_font_size" android:background="@null" android:layout_width="@dimen/button_width" android:layout_height="@dimen/context_height" android:text="@string/font_icon_content_copy" android:fontFamily="@font/materialiconsregular" />
            <com.neverland.viscomp.dialogs.MyTextView android:textAppearance="@style/StyleContextMenuText" android:gravity="center|left" android:layout_gravity="center|left" android:background="@null" android:layout_width="wrap_content" android:layout_height="@dimen/context_height" android:minWidth="@dimen/context_text_minwidth" android:text="@string/dialog_openbmkview_settings_export" android:singleLine="true" />
        </com.neverland.viscomp.dialogs.ClicableLinerLayout>
        <com.neverland.viscomp.dialogs.ClicableLinerLayout android:orientation="horizontal" android:id="@id/layoutContextItem4" android:paddingLeft="3.0dip" android:paddingRight="24.0dip" android:layout_width="wrap_content" android:layout_height="@dimen/context_height" android:minWidth="@dimen/popup_full_minwidth">
            <com.neverland.viscomp.dialogs.MenuButton android:textSize="@dimen/icon_font_size" android:background="@null" android:layout_width="@dimen/button_width" android:layout_height="@dimen/context_height" android:text="@string/font_icon_cancel" android:fontFamily="@font/materialiconsregular" />
            <com.neverland.viscomp.dialogs.MyTextView android:textAppearance="@style/StyleContextMenuText" android:gravity="center|left" android:layout_gravity="center|left" android:background="@null" android:layout_width="wrap_content" android:layout_height="@dimen/context_height" android:minWidth="@dimen/context_text_minwidth" android:text="@string/tooltip_close" android:singleLine="true" />
        </com.neverland.viscomp.dialogs.ClicableLinerLayout>
    </LinearLayout>
</RelativeLayout>