<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/mainlayout" android:paddingLeft="@dimen/dialog_padding_left" android:paddingTop="@dimen/dialog_padding_top" android:paddingRight="@dimen/dialog_padding_right" android:paddingBottom="@dimen/dialog_padding_bottom" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Button android:id="@id/buttonfake" android:background="@null" android:visibility="invisible" android:layout_width="1.0px" android:layout_height="1.0px" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
    <ScrollView android:id="@id/borderlayout" android:tag="paint" android:paddingLeft="6.0dip" android:paddingTop="6.0dip" android:paddingRight="3.0dip" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/settingsconfirm" android:fadeScrollbars="false" style="@style/ScrollBars"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <androidx.constraintlayout.widget.ConstraintLayout android:background="@null" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/settingsconfirm">
            <com.neverland.viscomp.dialogs.MyTextView android:textAppearance="@style/StyleContextMenuText" android:ellipsize="end" android:gravity="center|left" android:id="@id/labelhost" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:text="@string/dialog_opds_host" android:lines="2" app:layout_constraintBottom_toTopOf="@id/edithost" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <com.neverland.viscomp.dialogs.MyEditText android:textAppearance="@style/StyleFileItemNameText" android:gravity="center|left" android:id="@id/edithost" android:background="@null" android:paddingLeft="12.0dip" android:paddingTop="6.0dip" android:paddingRight="3.0dip" android:paddingBottom="6.0dip" android:layout_width="0.0dip" android:layout_height="@dimen/form_confirm_height" android:hint="@string/dialog_opds_host_hint" android:singleLine="true" android:selectAllOnFocus="true" android:maxLength="256" android:inputType="textNoSuggestions" android:imeOptions="actionDone" android:textCursorDrawable="@drawable/edit_text_cursor" app:layout_constraintBottom_toTopOf="@id/labelpassword" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/labelhost" />
            <com.neverland.viscomp.dialogs.MyTextView android:textAppearance="@style/StyleContextMenuText" android:ellipsize="end" android:gravity="center|left" android:id="@id/labelpassword" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:text="@string/dialog_opds_password" android:lines="2" app:layout_constraintBottom_toTopOf="@id/editpassword" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/edithost" />
            <com.neverland.viscomp.dialogs.MyEditText android:textAppearance="@style/StyleFileItemNameText" android:gravity="center|left" android:id="@id/editpassword" android:background="@null" android:paddingLeft="12.0dip" android:paddingTop="6.0dip" android:paddingRight="3.0dip" android:paddingBottom="6.0dip" android:layout_width="0.0dip" android:layout_height="@dimen/form_confirm_height" android:hint="@string/dialog_opds_password_hint" android:singleLine="true" android:selectAllOnFocus="true" android:maxLength="63" android:inputType="textPassword" android:imeOptions="actionDone" android:textCursorDrawable="@drawable/edit_text_cursor" app:layout_constraintBottom_toTopOf="@id/labelproxy" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/labelpassword" />
            <com.neverland.viscomp.dialogs.MyTextView android:textAppearance="@style/StyleContextMenuText" android:ellipsize="end" android:gravity="center|left" android:id="@id/labelproxy" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:text="@string/dialog_opds_proxyport" android:lines="2" app:layout_constraintBottom_toTopOf="@id/editproxy" app:layout_constraintLeft_toRightOf="@id/labeltype" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/editpassword" />
            <com.neverland.viscomp.dialogs.MyEditText android:textAppearance="@style/StyleFileItemNameText" android:gravity="center|left" android:id="@id/editproxy" android:background="@null" android:paddingLeft="12.0dip" android:paddingTop="6.0dip" android:paddingRight="3.0dip" android:paddingBottom="6.0dip" android:layout_width="0.0dip" android:layout_height="@dimen/form_confirm_height" android:hint="@string/dialog_opds_proxyport_hint" android:singleLine="true" android:selectAllOnFocus="true" android:maxLength="63" android:inputType="textNoSuggestions" android:imeOptions="actionDone" android:textCursorDrawable="@drawable/edit_text_cursor" app:layout_constraintBottom_toTopOf="@id/labellost1" app:layout_constraintLeft_toRightOf="@id/spinnerType" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/labelproxy" />
            <com.neverland.viscomp.dialogs.MyTextView android:textAppearance="@style/StyleContextMenuText" android:ellipsize="end" android:gravity="center|left" android:id="@id/labeltype" android:visibility="visible" android:layout_width="120.0dip" android:layout_height="0.0dip" android:layout_marginLeft="3.0dip" android:text="@string/dialog_opds_proxytype" android:maxLines="1" app:layout_constraintBottom_toBottomOf="@id/labelproxy" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toLeftOf="@id/labelproxy" app:layout_constraintTop_toTopOf="@id/labelproxy" />
            <com.neverland.viscomp.dialogs.BaseSpinner android:id="@id/spinnerType" android:visibility="visible" android:layout_width="120.0dip" android:layout_height="0.0dip" android:fadeEnabled="false" app:layout_constraintBottom_toBottomOf="@id/editproxy" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toLeftOf="@id/editproxy" app:layout_constraintTop_toTopOf="@id/editproxy" />
            <com.neverland.viscomp.dialogs.MyTextView android:textAppearance="@style/StyleFileItemPropertyText" android:ellipsize="end" android:gravity="center|left|top" android:id="@id/labellost1" android:background="@null" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:text="@string/dialog_opds_add_description" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/editproxy" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/settingsconfirm" android:tag="paintbottom" android:layout_width="fill_parent" android:layout_height="@dimen/form_confirm_height" android:layout_marginTop="3.0dip" android:layout_alignParentBottom="true">
        <com.neverland.viscomp.dialogs.MenuButton android:textSize="@dimen/icon_font_size" android:id="@id/buttonCancel" android:background="@null" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/font_icon_cancel" android:fontFamily="@font/materialiconsregular" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toLeftOf="@id/label1" />
        <com.neverland.viscomp.dialogs.MyTextView android:textAppearance="@style/StyleConfirmInfo" android:ellipsize="end" android:gravity="center" android:id="@id/label1" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="3.0dip" android:maxLines="3" app:layout_constraintLeft_toRightOf="@id/buttonCancel" app:layout_constraintRight_toLeftOf="@id/buttonOk" />
        <com.neverland.viscomp.dialogs.MenuButton android:textSize="@dimen/icon_font_size" android:id="@id/buttonOk" android:background="@null" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/font_icon_done" android:fontFamily="@font/materialiconsregular" app:layout_constraintLeft_toRightOf="@id/label1" app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>